--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,4 +24,10 @@ img { /* stylelint-disable-line */
   max-width: 100%;
 }
 
+main {
+  max-width: $max-width;
+}
+
 // TODO import
+@import "header";
+@import "buttons";
