--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,22 +4,22 @@
   position: relative;
   width: 100%;
   height: 40vw;
-  background: transparent url(../../img/header.jpg) no-repeat;
+  background: transparent url("../../img/header.jpg") no-repeat;
   background-size: cover;
 
   &__header {
+    z-index: 1;
     display: flex;
+    width: 100%;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
   }
 
-  &__subtitle{
-    text-transform: uppercase;
+  &__subtitle {
     z-index: 1;
+    text-transform: uppercase;
   }
 
   &__title {
