bætti við fontum og eitthverju

--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -8,17 +8,5 @@ $ljosGraenn: #2d2;
 $dokkGraenn: #1a1;
 $gulur: #fcffd2;
 $bleikur: #cc9694;
-
-.protection {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.4);
-}
-
-.main {
-  max-width: $max-width;
-}
+$font-main: Lora, Times New Roman, serif;
+$font-title: Roboto, Courier New, monospace;
