--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,7 +16,7 @@ html { /* stylelint-disable-line */
   overflow-x: hidden;
   overflow-y: scroll; // alltaf hafa y skrollbar
 
-  //font-family: $font-main;
+  font-family: $font-main;
   font-size: 16px;
 }
 
@@ -27,3 +27,4 @@ img { /* stylelint-disable-line */
 // TODO import
 @import "header";
 @import "buttons";
+@import "other";
