--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,7 +3,7 @@
 .header {
   position: relative;
   width: 100%;
-  height: 40vw;
+  height: 30vw;
   background: transparent url("../../img/header.jpg") no-repeat;
   background-size: cover;
 
@@ -26,5 +26,6 @@
   &__title {
     z-index: 1;
     font-family: $font-title;
+    font-size: 48px;
   }
 }
