lagaði smá útlit ekki fullkomið samt

--- a/src/styles/other.scss
+++ b/src/styles/other.scss
@@ -11,6 +11,11 @@
 .main {
   max-width: $max-width;
   margin: 0 auto;
+  padding: 0 $gutter;
+
+  @media (min-width: 1240px) {
+    padding: 0;
+  }
 }
 
 @font-face {
