--- a/src/styles/lectures.scss
+++ b/src/styles/lectures.scss
@@ -32,9 +32,20 @@
   flex-direction: column;
   height: 100%;
 
+  &:hover {
+    .lecture__img {
+      background-color: $grar;
+    }
+
+    .lecture__header {
+      background-color: $grar;
+    }
+  }
+
   &__img {
     width: 100%;
     height: 100%;
+    margin-bottom: -2px;
     background-color: $ljosGrar;
   }
 
