--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   height: 30vw;
-  background: transparent url("../../img/header.jpg") no-repeat;
+  background-image: url("/img/header.jpg");
   background-size: cover;
 
   &__header {
