skipulagði scss betur

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,7 +25,8 @@ img { /* stylelint-disable-line */
 }
 
 // TODO import
+@import "fonts";
 @import "header";
 @import "buttons";
-@import "other";
+@import "main";
 @import "lectures";
