--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -29,3 +29,13 @@
     font-size: 48px;
   }
 }
+
+.protection {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.4);
+}
