--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -19,6 +19,10 @@
   font-weight: 700;
   transition: 0.3s ease-in-out;
 
+  &--active {
+    background-color: $ljosGraenn;
+  }
+
   &:hover {
     cursor: pointer;
     background-color: $grar;
