--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,6 +4,7 @@
   position: relative;
   width: 100%;
   height: 30vw;
+  min-height: 200px;
   background-image: url("/img/header.jpg");
   background-size: cover;
 
@@ -21,12 +22,15 @@
     z-index: 1;
     text-transform: uppercase;
     font-family: $font-title;
+    padding: $gutter/2;
   }
 
   &__title {
     z-index: 1;
     font-family: $font-title;
     font-size: 48px;
+    text-align: center;
+    padding: $gutter/2;
   }
 }
 
