--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,16 +2,16 @@
 
 .footer {
   display: flex;
+  font-family: $font-title;
   flex-direction: column;
   align-items: center;
-  font-family: $font-title;
 
   &__button {
-    border: none;
-    font-size: 1em;
-    font-family: $font-title;
     margin: 2*$gutter;
     margin-bottom: 0;
+    font-family: $font-title;
+    font-size: 1em;
+    border: 0;
 
     &:hover {
       cursor: pointer;
@@ -23,9 +23,9 @@
   }
 
   &__link {
-    text-decoration: none;
-    color: #000;
     margin: 2*$gutter;
+    color: #000;
+    text-decoration: none;
 
     &:hover {
       cursor: pointer;
