--- a/src/styles/lectures.scss
+++ b/src/styles/lectures.scss
@@ -5,7 +5,7 @@
 
   &__row {
     display: flex;
-    margin: 0 -$gutter/2;
+    margin: 0 (-$gutter/2);
     flex-direction: row;
     flex-wrap: wrap;
   }
