lagaði smá galla í remove fallinu í storage.js

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: Lora;
-  src: url("../../fonts/Lora/Lora-Regular.ttf");
+  src: url("../fonts/Lora/Lora-Regular.ttf");
 }
 
 @font-face {
   font-family: Roboto;
-  src: url("../../fonts/Roboto_Mono/RobotoMono-Regular.ttf");
+  src: url("../fonts/Roboto_Mono/RobotoMono-Regular.ttf");
 }
