--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 30vw;
   min-height: 200px;
-  background-image: url('../img/header.jpg');
+  background-image: url("../img/header.jpg");
   background-size: cover;
 
   &__header {
