--- a/src/styles/lecture.scss
+++ b/src/styles/lecture.scss
@@ -27,10 +27,21 @@
   }
 }
 
-.video {
-  width: 100%;
-  height: 500px;
+.videoWrapper {
+  position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+  height: 0;
+  
+  .video {
+    position: absolute;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 100%;
+  }
 }
+
 
 .text {
   margin-bottom: -$gutter;
