--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -31,6 +31,10 @@
     font-family: $font-title;
     font-size: 48px;
     text-align: center;
+
+    @media (max-width: 440px) {
+      font-size: 32px;
+    }
   }
 }
 
