lagaði background-color á fót

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -12,6 +12,7 @@
     font-family: $font-title;
     font-size: 1em;
     border: 0;
+    background-color: #FFF;
 
     &:hover {
       cursor: pointer;
