lagaði lint villur

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -11,8 +11,8 @@
     margin-bottom: 0;
     font-family: $font-title;
     font-size: 1em;
+    background-color: #fff;
     border: 0;
-    background-color: #FFF;
 
     &:hover {
       cursor: pointer;
